--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.0-rc.1",
     "three": "^0.152.2",
     "web-vitals": "^2.1.4",
