--- a/package.json
+++ b/package.json
@@ -18,13 +18,12 @@
     "react-dom": "^18.2.0",
     "react-final-form": "^6.5.9",
     "react-helmet": "^6.1.0",
+    "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.0.7",
-    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "redux": "^4.2.1",
-    "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.0-rc.1",
     "three": "^0.152.2",
     "web-vitals": "^2.1.4",
